--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,8 @@ set -g default-terminal "screen-256color"
 
 set -g prefix C-b
 
+setw -g mode-keys vi
+
 # Set 'v' for vertical and 'h' for horizontal split
 bind v split-window -h -c '#{pane_current_path}'
 bind b split-window -v -c '#{pane_current_path}'
