--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,10 @@ set -g default-terminal "screen-256color"
 set -g prefix C-b
 
 setw -g mode-keys vi
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Set 'v' for vertical and 'h' for horizontal split
 bind v split-window -h -c '#{pane_current_path}'
