update tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,7 @@ bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection cl
 
 # Set 'v' for vertical and 'h' for horizontal split
 bind v split-window -h -c '#{pane_current_path}'
-bind b split-window -v -c '#{pane_current_path}'
+bind s split-window -v -c '#{pane_current_path}'
 
 # vim-like pane switching
 bind -r k select-pane -U
